# lewaf

./: .sync-state.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml
.builds/: alpine.yml
docs/: DEPLOYMENT_GUIDE.md  index.md
docs/adrs/: ADR-001-kernel-integration.md  ADR-002-native-kernel-strategy.md
docs/api/: reference.md
docs/deployment/: docker.md  guide.md  kubernetes.md
docs/guides/: custom-rules.md  integration-django.md  integration-fastapi.md  integration-flask.md  integration-starlette.md  quickstart.md
docs/monitoring/: prometheus.md
docs/performance/: tuning.md
docs/security/: hardening.md
docs/troubleshooting/: debugging.md  error-codes.md  runbook.md
examples/: asgi_demo.py  audit_logging_example.py
examples/docker/: .dockerignore  Dockerfile  Dockerfile.simple  README.md  crs-setup.conf  docker-compose.yml  lewaf.conf  prometheus.yml
examples/integrations/: README.md  asgi_example.py  django_example.py  fastapi_example.py  flask_example.py  wsgi_example.py
examples/production/: Dockerfile  MONITORING.md  alert_rules.yml  app.py  config.py  docker-compose.yml  grafana-dashboard.json  logrotate.conf  nginx.conf  prometheus.yml  rsyslog.conf
examples/reverse-proxy/: Dockerfile  README.md  docker-compose.yml  waf.conf
src/coraza_poc/: __init__.py  poc.py
src/lewaf/: exceptions.py
tests/: ADMIN_PATH_BLOCKING_TESTS.md  __init__.py  test_audit_logging.py  test_bodyprocessors_json.py  test_bodyprocessors_multipart.py  test_bodyprocessors_urlencoded.py  test_coraza_poc.py  test_core.py  test_crs_integration.py  test_crs_rule_parsing.py  test_integration.py  test_phase4_network_security.py  test_phase5_complete_variables.py  test_phase6_advanced_rules.py  test_primitives_actions.py  test_primitives_collections.py  test_primitives_operators.py  test_primitives_transformations.py  test_proxy.py  test_secmarker.py  test_transaction_body_integration.py  test_transaction_response.py
tests/a_unit/: test_core.py  test_error_logger.py  test_exceptions.py  test_extended_collections.py  test_extended_operators.py  test_extended_transformations.py  test_phase1_features.py  test_phase2_features.py  test_phase3_transformations.py  test_primitives_actions.py  test_primitives_collections.py  test_primitives_operators.py  test_primitives_transformations.py
(+215 files in other folders)
