[project]
name = "coraza-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.41.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
coraza-poc = "coraza_poc:main"
coraza-proxy = "coraza_poc.proxy.cli:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
]
