[project]
name = "lewaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.41.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "redis>=7.0.1",
    "pyyaml>=6.0.3",
    "click>=8.2.1",
]

[project.scripts]
coraza-poc = "lewaf:main"
coraza-proxy = "lewaf.proxy.cli:main"
lewaf-validate = "lewaf.cli.validate:validate"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # Test
    "pytest>=8.4.2",
    # Lint / Check
    "isort>=6.0.1",
    "ruff>=0.12.12",
    "pyrefly>=0.32.0",
    # Other
    "httpx>=0.28.1",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
    "monkeytype>=23.3.0",
    "pytest-cov>=7.0.0",
    "ty>=0.0.1a25",
]

#
# QA tools
#
